paar kleine dingen

--- a/src/view/panels/stylesheets/style.css
+++ b/src/view/panels/stylesheets/style.css
@@ -1,5 +1,4 @@
 
-
 .table-view{
     -fx-background-color: #424242;
 }
@@ -44,3 +43,5 @@
     -fx-font-family: Verdana;
     -fx-font-size: 15;
 }
+
+/*TODO*/
